fixed spacing on cards

--- a/_tmp/style.css
+++ b/_tmp/style.css
@@ -1182,6 +1182,16 @@ select{
   background-color: rgba(229, 231, 235, var(--tw-bg-opacity)) !important;
 }
 
+.bg-gray-400{
+  --tw-bg-opacity: 1 !important;
+  background-color: rgba(156, 163, 175, var(--tw-bg-opacity)) !important;
+}
+
+.bg-yellow-100{
+  --tw-bg-opacity: 1 !important;
+  background-color: rgba(254, 243, 199, var(--tw-bg-opacity)) !important;
+}
+
 .bg-green-600{
   --tw-bg-opacity: 1 !important;
   background-color: rgba(5, 150, 105, var(--tw-bg-opacity)) !important;
@@ -1190,6 +1200,11 @@ select{
 .bg-white{
   --tw-bg-opacity: 1 !important;
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity)) !important;
+}
+
+.bg-black{
+  --tw-bg-opacity: 1 !important;
+  background-color: rgba(0, 0, 0, var(--tw-bg-opacity)) !important;
 }
 
 .hover\:bg-blue-600:hover{
@@ -1205,6 +1220,10 @@ select{
 .dark .dark\:bg-gray-900{
   --tw-bg-opacity: 1 !important;
   background-color: rgba(17, 24, 39, var(--tw-bg-opacity)) !important;
+}
+
+.bg-opacity-75{
+  --tw-bg-opacity: 0.75 !important;
 }
 
 .border-gray-100{
@@ -1225,6 +1244,11 @@ select{
 .border-gray-900{
   --tw-border-opacity: 1 !important;
   border-color: rgba(17, 24, 39, var(--tw-border-opacity)) !important;
+}
+
+.border-yellow-500{
+  --tw-border-opacity: 1 !important;
+  border-color: rgba(245, 158, 11, var(--tw-border-opacity)) !important;
 }
 
 .hover\:border-gray-500:hover{
@@ -1278,6 +1302,10 @@ select{
   border-left-width: 1px !important;
 }
 
+.cursor-pointer{
+  cursor: pointer !important;
+}
+
 .block{
   display: block !important;
 }
@@ -1308,6 +1336,10 @@ select{
 
 .flex-col{
   flex-direction: column !important;
+}
+
+.flex-wrap{
+  flex-wrap: wrap !important;
 }
 
 .items-start{
@@ -1342,8 +1374,8 @@ select{
   justify-content: space-between !important;
 }
 
-.justify-self-end{
-  justify-self: end !important;
+.flex-1{
+  flex: 1 1 0% !important;
 }
 
 .flex-none{
@@ -1443,6 +1475,14 @@ select{
   margin: 0px !important;
 }
 
+.m-4{
+  margin: 1rem !important;
+}
+
+.m-8{
+  margin: 2rem !important;
+}
+
 .mx-0{
   margin-left: 0px !important;
   margin-right: 0px !important;
@@ -1451,6 +1491,11 @@ select{
 .my-2{
   margin-top: 0.5rem !important;
   margin-bottom: 0.5rem !important;
+}
+
+.my-4{
+  margin-top: 1rem !important;
+  margin-bottom: 1rem !important;
 }
 
 .mx-4{
@@ -1529,6 +1574,10 @@ select{
   margin-top: 0px !important;
 }
 
+.max-h-full{
+  max-height: 100% !important;
+}
+
 .max-w-sm{
   max-width: 24rem !important;
 }
@@ -1541,6 +1590,10 @@ select{
   max-width: 32rem !important;
 }
 
+.max-w-4xl{
+  max-width: 56rem !important;
+}
+
 .max-w-5xl{
   max-width: 64rem !important;
 }
@@ -1549,9 +1602,31 @@ select{
   max-width: 65ch !important;
 }
 
+.object-contain{
+  -o-object-fit: contain !important;
+     object-fit: contain !important;
+}
+
+.opacity-0{
+  opacity: 0 !important;
+}
+
+.opacity-100{
+  opacity: 1 !important;
+}
+
+.outline-none{
+  outline: 2px solid transparent !important;
+  outline-offset: 2px !important;
+}
+
 .focus\:outline-none:focus{
   outline: 2px solid transparent !important;
   outline-offset: 2px !important;
+}
+
+.overflow-auto{
+  overflow: auto !important;
 }
 
 .overflow-hidden{
@@ -1632,6 +1707,14 @@ select{
   padding-right: 0px !important;
 }
 
+.pt-2{
+  padding-top: 0.5rem !important;
+}
+
+.pr-2{
+  padding-right: 0.5rem !important;
+}
+
 .pb-2{
   padding-bottom: 0.5rem !important;
 }
@@ -1688,6 +1771,13 @@ select{
   position: sticky !important;
 }
 
+.inset-0{
+  top: 0px !important;
+  right: 0px !important;
+  bottom: 0px !important;
+  left: 0px !important;
+}
+
 .top-0{
   top: 0px !important;
 }
@@ -1727,6 +1817,10 @@ select{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000) !important;
+}
+
+.fill-current{
+  fill: currentColor !important;
 }
 
 .text-center{
@@ -1807,6 +1901,10 @@ select{
   width: 15rem !important;
 }
 
+.w-1\/6{
+  width: 16.666667% !important;
+}
+
 .w-full{
   width: 100% !important;
 }
@@ -1844,14 +1942,44 @@ select{
   transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
 }
 
+.scale-90{
+  --tw-scale-x: .9 !important;
+  --tw-scale-y: .9 !important;
+}
+
+.scale-100{
+  --tw-scale-x: 1 !important;
+  --tw-scale-y: 1 !important;
+}
+
+.transition{
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter !important;
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter !important;
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter !important;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) !important;
+  transition-duration: 150ms !important;
+}
+
 .transition-colors{
   transition-property: background-color, border-color, color, fill, stroke !important;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) !important;
   transition-duration: 150ms !important;
 }
 
+.ease-in{
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1) !important;
+}
+
+.ease-out{
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1) !important;
+}
+
 .duration-200{
   transition-duration: 200ms !important;
+}
+
+.duration-300{
+  transition-duration: 300ms !important;
 }
 
 @-webkit-keyframes spin{
@@ -2262,6 +2390,10 @@ select{
 
   .sm\:prose > :last-child{
     margin-bottom: 0;
+  }
+
+  .sm\:m-8{
+    margin: 2rem !important;
   }
 }
 
